<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/draw_insets_frame_layout"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/icons"
android:autoMirrored="true"
    tools:context="com.newsfeed.prof_mohamedatef.capstoneproject_newsfeed.Activities.PostToNewsFeedActivity">
<android.support.design.widget.AppBarLayout
    android:id="@+id/appbar"
    app:elevation="@dimen/appbar_elevation"
    android:layout_width="match_parent"
    android:layout_height="@dimen/detail_appbar_height"
    android:theme="@style/AppTheme.AppBarOverlay">
    <android.support.design.widget.CollapsingToolbarLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:expandedTitleMarginEnd="64dp"
        app:expandedTitleMarginStart="48dp"
        app:layout_scrollFlags="scroll|enterAlways">
        <RelativeLayout
            android:id="@+id/photo_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_collapseMode="parallax"
            app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed">
            <ImageView
                android:contentDescription="@string/Article_cover"
                android:id="@+id/ImageReport"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:fitsSystemWindows="true" />
            <LinearLayout
                android:layout_marginTop="@dimen/top_margin"
                android:orientation="vertical"
                android:gravity="center_horizontal|center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <LinearLayout

                    android:gravity="center_horizontal"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"></LinearLayout>
                    <LinearLayout
                        android:layout_margin="@dimen/top_margin"
                        android:padding="@dimen/top_margin"
                        android:gravity="center"
                        android:layout_width="0dp"
                        android:layout_weight="4"
                        android:layout_height="match_parent">
                        <de.hdodenhof.circleimageview.CircleImageView
                            android:transitionName="@string/profile_img"
                            android:contentDescription="@string/profile_img"
                            android:id="@+id/ProfileImage_header_Post"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:src="@drawable/news" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_margin="@dimen/top_margin"
                        android:gravity="right"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent">
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_marginTop="@dimen/top_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <TextView
                        android:layout_marginTop="@dimen/top_margin"
                        android:id="@+id/txtProfileOwner_Posts"
                        android:textColor="@color/icons"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:gravity="center_horizontal|center_vertical"
                        android:text="@string/author"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_marginTop="@dimen/top_margin"
                        android:id="@+id/DateTime"
                        android:textColor="@color/icons"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:gravity="center_horizontal|center_vertical"
                        android:text="@string/date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
        <android.support.v7.widget.Toolbar
            android:id="@+id/detail_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:layout_scrollFlags="scroll|enterAlways"
            app:layout_collapseMode="pin"/>
    </android.support.design.widget.CollapsingToolbarLayout>
</android.support.design.widget.AppBarLayout>
<android.support.v4.widget.NestedScrollView
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="12dp"
        android:orientation="vertical"
        android:background="#fff"
        android:weightSum="6">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="0.6"
            android:gravity="right"
            android:layout_height="wrap_content">
            <ImageView
                android:nextFocusLeft="@id/txt_ReportTitle"
                android:nextFocusDown="@id/txt_ReportDescription"
                android:contentDescription="@string/publish"
                android:focusable="true"
                android:clickable="true"
                android:id="@+id/ImagePost"
                android:layout_gravity="right"
                android:src="@drawable/post_3"
                android:layout_width="45dp"
                android:layout_height="45dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.4">
            <LinearLayout
                android:orientation="vertical"
                android:gravity="center_horizontal|center_vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_margin="@dimen/top_margin"
                    android:id="@+id/category_title"
                    android:textColor="@color/primaryLightColor"
                    android:textSize="22sp"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/category"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />
                <Spinner
                    android:focusable="true"
                    android:nextFocusRight="@+id/ImagePost"
                    android:nextFocusDown="@+id/txt_ReportTitle"
                    android:layout_margin="@dimen/top_margin"
                    android:background="#000000"
                    android:layout_marginLeft="3dp"
                    android:id="@+id/Categories_spinner"
                    android:textStyle="bold"
                    android:textSize="22sp"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="@dimen/top_margin"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:background="@drawable/touch_selector"
            android:id="@+id/recipe_container">
            <EditText
                android:focusable="true"
                android:nextFocusUp="@id/Categories_spinner"
                android:nextFocusRight="@id/ImagePost"
                android:nextFocusDown="@id/txt_ReportDescription"
                android:id="@+id/txt_ReportTitle"
                android:hint="@string/TitleHint"
                android:textColor="@color/primaryLightColor"
                android:textColorHint="@color/primaryLightColor"
                android:textSize="22sp"
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:padding="16dp"
                android:lines="3"
                android:minLines="1"
                android:gravity="center_vertical|center_horizontal"
                android:maxLines="3"
                android:inputType="textMultiLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:scrollbars="vertical" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="@dimen/top_margin"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <EditText
                android:focusable="true"
                android:nextFocusDown="@+id/camera"
                android:nextFocusUp="@id/txt_ReportTitle"
                android:id="@+id/txt_ReportDescription"
                android:hint="@string/DescriptionHint"
                android:textColor="@color/primaryLightColor"
                android:textColorHint="@color/primaryLightColor"
                android:lines="14"
                android:minLines="10"
                android:gravity="center_vertical|center_horizontal"
                android:maxLines="14"
                android:inputType="textMultiLine"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:scrollbars="vertical" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:background="#dcdcdc" />
        <LinearLayout
            android:id="@+id/linearLayoutRecorder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/toolbar"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal|center_vertical"
            android:layout_weight="1">
            <Chronometer
                android:id="@+id/chronometerTimer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:textColor="@android:color/darker_gray"
                android:layout_gravity="center_horizontal" />
            <LinearLayout
                android:id="@+id/linearLayoutPlay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:visibility="gone">
                <ImageView
                    android:contentDescription="@string/play"
                    android:id="@+id/imageViewPlay"
                    android:nextFocusUp="@id/txt_ReportDescription"
                    android:nextFocusDown="@+id/camera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_play"
                    android:layout_gravity="center_vertical"
                    android:clickable="true"
                    android:tint="@color/black"
                    android:focusable="true"
                    android:background="?android:attr/selectableItemBackground" />
                <SeekBar
                    android:id="@+id/seekBar"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical"
                android:layout_marginTop="10dp">

                <ImageView
                    android:contentDescription="@string/stop"
                    android:id="@+id/imageViewStop"
                    android:nextFocusUp="@id/txt_ReportDescription"
                    android:nextFocusLeft="@+id/imageViewPlay"
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:src="@drawable/ic_stop"
                    android:tint="@color/primaryLightColor"
                    android:background="?android:attr/selectableItemBackground"
                    android:layout_gravity="center_vertical"
                    android:visibility="gone"
                    android:clickable="true"
                    android:focusable="true" />
            </LinearLayout>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:background="#dcdcdc" />
        <LinearLayout
            android:id="@+id/camera_Linear_posts_addpostactivity"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical">
            <LinearLayout
                android:gravity="center_horizontal|center_vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <ImageView
                    android:focusable="true"
                    android:nextFocusUp="@id/txt_ReportDescription"
                    android:nextFocusRight="@+id/imageViewRecord"
                    android:contentDescription="@string/launch_camera"
                    android:id="@+id/camera"
                    android:src="@drawable/camera_logo"
                    android:layout_width="50dp"
                    android:layout_height="50dp" />
            </LinearLayout>
            <LinearLayout
                android:gravity="center_horizontal|center_vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <ImageView
                    android:contentDescription="@string/start_recording"
                    android:nextFocusUp="@id/imageViewStop"
                    android:nextFocusLeft="@+id/camera"
                    android:id="@+id/imageViewRecord"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_microphone"
                    android:background="?android:attr/selectableItemBackground"
                    android:layout_marginEnd="10dp"
                    android:clickable="true"
                    android:focusable="true" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>
