<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="@dimen/audio_layout_height"
    android:id="@+id/SoundLinear">
    <LinearLayout
        android:id="@+id/linearLayoutRecorder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal|center_vertical"
        android:layout_weight="1">
        <Chronometer
            android:id="@+id/chronometerTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textColor="@android:color/darker_gray"
            android:layout_gravity="center_horizontal" />
        <LinearLayout
            android:id="@+id/linearLayoutPlay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:visibility="gone">
            <ImageView
                android:contentDescription="@string/play"
                android:id="@+id/imageViewPlay"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/ic_play"
                android:layout_gravity="center_vertical"
                android:clickable="true"
                android:tint="@color/black"
                android:focusable="true"
                android:background="?android:attr/selectableItemBackground" />
            <SeekBar
                android:id="@+id/seekBar"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="10dp">

            <ImageView
                android:contentDescription="@string/stop"
                android:id="@+id/imageViewStop"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:src="@drawable/ic_stop"
                android:tint="@color/primaryLightColor"
                android:background="?android:attr/selectableItemBackground"
                android:layout_gravity="center_vertical"
                android:visibility="gone"
                android:clickable="true"
                android:focusable="true" />
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:background="#dcdcdc" />
    <LinearLayout
        android:gravity="center_vertical|center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">
        <ImageView
            android:layout_gravity="center"
        android:contentDescription="@string/muted"
        android:id="@+id/audio_muted"
        android:layout_width="@dimen/no_audio_image_dimens"
        android:layout_height="@dimen/no_audio_image_dimens"
        android:layout_weight="2"/>
    </LinearLayout>
</LinearLayout>